templates/app-repo-template/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: APP_NAME-virtualservice
    namespace: APP_NAME
spec:
    hosts:
    - "nginxservice.endpoints.<project-id>.cloud.goog"
    gateways:
    - asm-ingress-gw/asm-ingressgateway
    http:
    - route:
      - destination:
          host: nginx
          port:
            number: 80
